--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>aprl*+</title>
 </head>
 <body>
+    <div class="lines"></div>
     <div class="main">
+        <div class="noise"></div>
         <div class="header">
             <div class="logo">
                 <img class="logo-img" src="./assets/logo.png">
@@ -29,7 +31,12 @@
             </div>
         </div>
         <div class="content">
-
+            <div class="left">
+                welcome, traveler
+            </div>
+            <div class="right">
+                
+            </div>
         </div>
         <div class="footer">
 
