update wip text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </div>
         <div class="content">
             <div class="left">
-                welcome, traveler
+                welcome, traveler. <br>
+                i'm still writing this, check back later :)
             </div>
             <div class="right">
                 
