update styles, content, add links

--- a/index.html
+++ b/index.html
@@ -18,29 +18,49 @@
             <div class="logo">
                 <img class="logo-img" src="./assets/logo.png">
             </div>
-            <div class="menu">
-                <div class="menu-button">
-                    <a href="#">art</a>
+            <div class="content">
+                <div class="left">
+                    <div class="profile-wrap">
+                        <img class="profile-img" src="./assets/profile.png">
+                        <div class="profile-info">
+                            <p>‧₊˚🖇✩ ₊˚🎧⊹♡</p>
+                            <p>april h.</p>
+                            <p>she / her</p>
+                            <p>24yo</p>
+                            <p>qld, australia</p>
+                            <p>
+                                <img  class="profile-flag" src="./assets/trans.png">
+                                <img  class="profile-flag" src="./assets/pan.png">
+                                <img  class="profile-flag" src="./assets/aus.png">
+                                <img  class="profile-flag" src="./assets/de.png">
+                            </p>
+                            <p>♡⊹🎧˚₊ ✩️🖇˚₊‧</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="menu-button">
-                    <a href="#">music</a>
-                </div>
-                <div class="menu-button">
-                    <a href="#">blog</a>
+                <div class="right">
+                    welcome, traveler ("`- ,-`)<br>
+                    - my name is april (or aprl*+), im an independant artist trying to make a space for myself on the internet.<br>
+                    i'm really into late 90's tech aesthetics and have a very obnoxious obsession with the amen break :) <br>
+                    most of my time is spent making music, art or videos so expect to see alot of that :) <br>
+                    - if you'd like to contact me for whatever reason my discord is the best place to do that: aprilthefool<br>
                 </div>
             </div>
         </div>
-        <div class="content">
-            <div class="left">
-                welcome, traveler. <br>
-                i'm still writing this, check back later :)
+        <div class="menu">
+            <div class="menu-button">
+                <a href="https://open.spotify.com/artist/7zhAonek6IcrNr6jLon9cr?si=KMZOgBrfT2SIzJ5ryzqCWw" target="_blank"><img class="menu-button-img" src="./assets/spotify.png"> spotify</a>
             </div>
-            <div class="right">
-                
+            <div class="menu-button">
+                <a href="https://www.tiktok.com/@aprlcomputermusic" target="_blank"><img class="menu-button-img" src="./assets/tiktok.png"> tiktok</a>
             </div>
-        </div>
+            <div class="menu-button">
+                <a href="https://music.apple.com/us/artist/aprl/1816653878" target="_blank"><img class="menu-button-img" src="./assets/apple.png"> apple</a>
+            </div>
+            <div class="menu-button">
+                <a href="https://www.youtube.com/@aprlonline" target="_blank"><img class="menu-button-img" src="./assets/youtube.png"> youtube</a>
+            </div>
         <div class="footer">
-
         </div>
     </div>
 </body>
